--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -32,6 +32,16 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
@@ -47,7 +57,10 @@ jobs:
           context: jsonnet
           push: true
           tags: ${{env.IMAGE_NAME}}:${{env.BUILD_NUMBER}} , ${{env.IMAGE_NAME}}:latest
-      # - name: Run make file
-      #   run: |
-      #     echo "run makefile..."
-      #     make test
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
+
+      - name: Move cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
