--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,7 +19,7 @@ jobs:
     env:
       BUILD_NUMBER: ${{github.event.push.push_id}}
     steps:
-      - run: echo ${{github.event}}
+      - uses: hmarr/debug-action@v2
 
       - uses: actions/checkout@v2
 
