--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -17,7 +17,7 @@ jobs:
   images:
     runs-on: ubuntu-latest
     env:
-      BUILD_NUMBER: $GITHUB_RUN_NUMBER
+      BUILD_NUMBER: ${{github.run_number}}
     steps:
       - uses: actions/checkout@v2
 
