--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -82,5 +82,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./jbos-manifests.yaml
-          asset_name: jbos-manifests.yaml
+          asset_name: jbos-manifests-${{env.VERSION}}${{env.BUILD_NUMBER}}.yaml
           asset_content_type: text/yaml
