--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -62,7 +62,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - run: |-
-          docker run --mount "type=bind,src=$(pwd)/manifests,dst=/src,readonly" ${{env.REGISTRY}}/${{env.IMAGE_PREFIX}}-jsonnet:latest > ./jbos-manifests.yaml
+          docker run --mount "type=bind,src=$(pwd)/manifests,dst=/src,readonly" ${{env.REGISTRY}}/${{env.IMAGE_PREFIX}}-jsonnet:latest > ./jabos-manifests.yaml
 
       - name: Create Release
         id: create_release
@@ -81,6 +81,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./jbos-manifests.yaml
-          asset_name: jbos-manifests-${{env.VERSION}}${{env.BUILD_NUMBER}}.yaml
+          asset_path: ./jabos-manifests.yaml
+          asset_name: jabos-manifests-${{env.VERSION}}${{env.BUILD_NUMBER}}.yaml
           asset_content_type: text/yaml
