--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,7 +12,8 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_PREFIX: ${{ github.repository }}-
-  VERSION: 0.0.
+  VERSION: "0.0"
+  NAMESPACE: jabos
 
 jobs:
   images:
@@ -46,7 +47,7 @@ jobs:
         with:
           context: jsonnet
           push: true
-          tags: ${{env.IMAGE_NAME}}:${{env.VERSION}}${{env.BUILD_NUMBER}},${{env.IMAGE_NAME}}:${{env.VERSION}} , ${{env.IMAGE_NAME}}:latest
+          tags: ${{env.IMAGE_NAME}}:${{env.VERSION}}.${{env.BUILD_NUMBER}},${{env.IMAGE_NAME}}:${{env.VERSION}} , ${{env.IMAGE_NAME}}:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
 
@@ -57,7 +58,18 @@ jobs:
         with:
           context: operator
           push: true
-          tags: ${{env.IMAGE_NAME}}:${{env.VERSION}}${{env.BUILD_NUMBER}},${{env.IMAGE_NAME}}:${{env.VERSION}} , ${{env.IMAGE_NAME}}:latest
+          tags: ${{env.IMAGE_NAME}}:${{env.VERSION}}.${{env.BUILD_NUMBER}},${{env.IMAGE_NAME}}:${{env.VERSION}} , ${{env.IMAGE_NAME}}:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
+
+      - name: docker-image-builder-init
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        env:
+          IMAGE_NAME: ${{env.REGISTRY}}/${{env.IMAGE_PREFIX}}docker-image-builder-init
+        with:
+          context: docker-image-builder-init
+          push: true
+          tags: ${{env.IMAGE_NAME}}:${{env.VERSION}}.${{env.BUILD_NUMBER}},${{env.IMAGE_NAME}}:${{env.VERSION}} , ${{env.IMAGE_NAME}}:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
 
@@ -74,8 +86,11 @@ jobs:
 
       - run: |-
           docker run --mount "type=bind,src=$(pwd)/manifests,dst=/src,readonly" \
-          ${{env.REGISTRY}}/${{env.IMAGE_PREFIX}}jsonnet:latest -- \
-          --tla-str 'imagePrefix=${{env.REGISTRY}}/${{env.IMAGE_PREFIX}}' --tla-str 'buildNumber=${{env.VERSION}}${{env.BUILD_NUMBER}}' > ./jabos-manifests.yaml
+            ${{env.REGISTRY}}/${{env.IMAGE_PREFIX}}jsonnet:latest -- \
+            --tla-str 'imagePrefix=${{env.REGISTRY}}/${{env.IMAGE_PREFIX}}' \
+            --tla-str 'buildNumber=${{env.VERSION}}.${{env.BUILD_NUMBER}}' \
+            --tla-str 'namespace=${{env.NAMESPACE}}' \
+            > ./jabos-manifests.yaml
 
       - name: Create Release
         id: create_release
@@ -83,8 +98,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         with:
-          tag_name: ${{env.VERSION}}${{env.BUILD_NUMBER}}
-          release_name: Build ${{env.VERSION}}${{env.BUILD_NUMBER}}
+          tag_name: ${{env.VERSION}}.${{env.BUILD_NUMBER}}
+          release_name: Build ${{env.VERSION}}.${{env.BUILD_NUMBER}}
           draft: false
           prerelease: true
       - name: Upload Release Asset
@@ -95,5 +110,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./jabos-manifests.yaml
-          asset_name: jabos-manifests-${{env.VERSION}}${{env.BUILD_NUMBER}}.yaml
+          asset_name: jabos-manifests-${{env.VERSION}}.${{env.BUILD_NUMBER}}.yaml
           asset_content_type: text/yaml
