--- a/operator/package.json
+++ b/operator/package.json
@@ -9,7 +9,9 @@
   "author": "srfrnk@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
+    "isomorphic-git": "^1.10.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
