--- a/jsonnet/Dockerfile
+++ b/jsonnet/Dockerfile
@@ -2,7 +2,7 @@ FROM golang
 
 RUN go get github.com/google/go-jsonnet/cmd/jsonnet
 
-RUN wget https://github.com/mikefarah/yq/releases/download/v4.2.0/yq_linux_amd64 -O /usr/bin/yq &&\
+RUN wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq &&\
   chmod +x /usr/bin/yq
 
 COPY ./build-manifests.sh /build-manifests.sh
