--- a/operator/package.json
+++ b/operator/package.json
@@ -10,8 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
-    "express-async-handler": "^1.1.4",
-    "isomorphic-git": "^1.10.1"
+    "express-async-handler": "^1.1.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
