converted to use kubectl

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -103,7 +103,7 @@ jobs:
           context: post-builder
           build-args: |
             IMAGE_PREFIX=${{env.REGISTRY}}/${{env.IMAGE_PREFIX}}
-            IMAGE_VERSION=${{env.VERSION}}.${{env.BUILD_NUMBER}}
+            IMAGE_VERSION=:${{env.VERSION}}.${{env.BUILD_NUMBER}}
           push: true
           tags: ${{env.IMAGE_NAME}}:${{env.VERSION}}.${{env.BUILD_NUMBER}},${{env.IMAGE_NAME}}:${{env.VERSION}} , ${{env.IMAGE_NAME}}:latest
           cache-from: type=local,src=/tmp/.buildx-cache
@@ -117,7 +117,7 @@ jobs:
           context: manifest-deployer
           build-args: |
             IMAGE_PREFIX=${{env.REGISTRY}}/${{env.IMAGE_PREFIX}}
-            IMAGE_VERSION=${{env.VERSION}}.${{env.BUILD_NUMBER}}
+            IMAGE_VERSION=:${{env.VERSION}}.${{env.BUILD_NUMBER}}
           push: true
           tags: ${{env.IMAGE_NAME}}:${{env.VERSION}}.${{env.BUILD_NUMBER}} , ${{env.IMAGE_NAME}}:${{env.VERSION}} , ${{env.IMAGE_NAME}}:latest
           cache-from: type=local,src=/tmp/.buildx-cache
