--- a/operator/Dockerfile
+++ b/operator/Dockerfile
@@ -1,7 +1,13 @@
+ARG IMAGE_PREFIX
+ARG IMAGE_VERSION
+
 FROM node:lts
 
 RUN apt-get update -y
 RUN apt-get install -yy curl git wget
+
+RUN mkdir /home/node/.ssh &&\
+  printf "Host github.com\n\tStrictHostKeyChecking no\n" >> /home/node/.ssh/config
 
 WORKDIR /app
 COPY ./package*.json /app/
@@ -9,9 +15,8 @@ RUN npm install
 
 COPY . /app
 
-RUN mkdir /tempGit && chown 1000 /tempGit
+RUN mkdir /tempGit && chown node /tempGit
 
-USER 1000
+USER node
 
-ENTRYPOINT ["npx","nodemon"]
-CMD ["index.ts"]
+ENTRYPOINT ["./start.sh"]
