--- a/jsonnet-manifest-builder/Dockerfile
+++ b/jsonnet-manifest-builder/Dockerfile
@@ -1,3 +1,6 @@
+ARG IMAGE_PREFIX
+ARG IMAGE_VERSION
+
 FROM golang as builder
 
 RUN go get github.com/google/go-jsonnet/cmd/jsonnet
@@ -7,16 +10,22 @@ FROM ubuntu
 RUN apt-get update -y
 RUN apt-get install -yy curl git wget
 
-RUN mkdir /build && chown 1000 /build
+RUN useradd -ms /bin/bash user
+
+RUN mkdir /build && chown user /build
 
 COPY --from=builder /go/bin/jsonnet /usr/bin/
 
 RUN wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq &&\
   chmod +x /usr/bin/yq
 
-COPY ./build.sh /
 RUN mkdir /gitTemp && chown 1000 /gitTemp
 
-USER 1000
+RUN mkdir /home/user/.ssh &&\
+  printf "Host github.com\n\tStrictHostKeyChecking no\n" >> /home/user/.ssh/config
+
+COPY ./build.sh /
+
+USER user
 
 ENTRYPOINT ["/build.sh"]
