--- a/jsonnet/Dockerfile
+++ b/jsonnet/Dockerfile
@@ -5,9 +5,11 @@ RUN go get github.com/google/go-jsonnet/cmd/jsonnet
 RUN wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq &&\
   chmod +x /usr/bin/yq
 
-COPY ./build-manifests.sh /build-manifests.sh
-RUN mkdir /build && chown 1000 /build
+RUN useradd -ms /bin/bash user
 
-USER 1000
+COPY ./build-manifests.sh /build-manifests.sh
+RUN mkdir /build && chown user /build
+
+USER user
 
 ENTRYPOINT [ "/bin/bash","-c","/build-manifests.sh $@" ]
