--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -185,7 +185,7 @@ jobs:
           prerelease: false
 
       - name: Upload Release Asset
-        id: upload-release-asset
+        id: upload-release-asset-manifests
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -196,7 +196,7 @@ jobs:
           asset_content_type: text/yaml
 
       - name: Upload Release Asset
-        id: upload-release-asset
+        id: upload-release-asset-readme
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
