--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -175,12 +175,11 @@ jobs:
 
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        uses: softprops/action-gh-release@v1
         with:
+          name: Build ${{env.VERSION}}.${{env.BUILD_NUMBER}}
           tag_name: ${{env.VERSION}}.${{env.BUILD_NUMBER}}
-          release_name: Build ${{env.VERSION}}.${{env.BUILD_NUMBER}}
+          token: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
           draft: false
           prerelease: false
 
