--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -176,6 +176,7 @@ jobs:
       - name: Create Release
         id: create_release
         uses: softprops/action-gh-release@v1
+        if: github.ref == 'refs/heads/main'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -187,6 +188,7 @@ jobs:
       - name: Upload Release Asset
         id: upload-release-asset-manifests
         uses: actions/upload-release-asset@v1
+        if: github.ref == 'refs/heads/main'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -198,6 +200,7 @@ jobs:
       - name: Upload Release Asset
         id: upload-release-asset-readme
         uses: actions/upload-release-asset@v1
+        if: github.ref == 'refs/heads/main'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
