--- a/jsonnet-manifest-builder/Dockerfile
+++ b/jsonnet-manifest-builder/Dockerfile
@@ -8,7 +8,7 @@ RUN go get github.com/google/go-jsonnet/cmd/jsonnet
 FROM ubuntu
 
 RUN apt-get update -y
-RUN apt-get install -yy curl git wget
+RUN apt-get install -yy curl wget
 
 RUN useradd -ms /bin/bash user
 
@@ -18,11 +18,6 @@ COPY --from=builder /go/bin/jsonnet /usr/bin/
 
 RUN wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq &&\
   chmod +x /usr/bin/yq
-
-RUN mkdir /gitTemp && chown 1000 /gitTemp
-
-RUN mkdir /home/user/.ssh &&\
-  printf "Host github.com\n\tStrictHostKeyChecking no\n" >> /home/user/.ssh/config
 
 COPY ./build.sh /
 
