--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,5 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Push
 
 on:
@@ -179,13 +177,28 @@ jobs:
       - uses: actions/checkout@v2
 
       - run: |-
+          mkdir ./build
           docker run --mount "type=bind,src=$(pwd)/manifests,dst=/src,readonly" \
             ${{env.REGISTRY}}/${{env.IMAGE_PREFIX}}jsonnet:latest -- \
             --tla-str 'imagePrefix=${{env.REGISTRY}}/${{env.IMAGE_PREFIX}}' \
             --tla-str 'buildNumber=${{env.VERSION}}.${{env.BUILD_NUMBER}}' \
             --tla-str 'namespace=${{env.NAMESPACE}}' \
             --tla-str 'debug=false' \
-            > ./jabos-manifests.yaml
+            > ./build/jabos-manifests.yaml
+
+      - uses: chrisdickinson/setup-yq@latest
+
+      - run: |-
+          yq e -i '.api-info.version="${{env.VERSION}}.${{env.BUILD_NUMBER}}"' ./api-info.yaml
+          mkdir ./build/output
+          docker run --mount "type=bind,src=$(pwd),dst=/data,readonly" \
+            ghcr.io/srfrnk/crd-api-doc-gen:latest /data/build /data/build/output /data/api-info.yaml
+
+      - name: Deploy Docs
+        uses: JamesIves/github-pages-deploy-action@4.1.5
+        with:
+          branch: gh-pages
+          folder: build/output
 
       - name: Create Release
         id: create_release
@@ -199,7 +212,7 @@ jobs:
           draft: false
           prerelease: false
 
-      - name: Upload Release Asset
+      - name: Upload Manifests Asset
         id: upload-release-asset-manifests
         uses: actions/upload-release-asset@v1
         if: github.ref == 'refs/heads/main'
@@ -207,11 +220,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./jabos-manifests.yaml
+          asset_path: ./build/jabos-manifests.yaml
           asset_name: jabos-manifests.yaml
           asset_content_type: text/yaml
 
-      - name: Upload Release Asset
+      - name: Upload Readme Asset
         id: upload-release-asset-readme
         uses: actions/upload-release-asset@v1
         if: github.ref == 'refs/heads/main'
@@ -222,3 +235,15 @@ jobs:
           asset_path: ./README.md
           asset_name: README.md
           asset_content_type: text/markdown
+
+      - name: Upload Api Docs Asset
+        id: upload-release-asset-api-docs
+        uses: actions/upload-release-asset@v1
+        if: github.ref == 'refs/heads/main'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./build/output/index.html
+          asset_name: api-docs.html
+          asset_content_type: text/html
