--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -186,10 +186,9 @@ jobs:
             --tla-str 'debug=false' \
             > ./build/jabos-manifests.yaml
 
-      - uses: chrisdickinson/setup-yq@latest
+      - uses: srfrnk/setup-yq@v1.0.2
 
       - run: |-
-          yq --help
           yq e -i '.api-info.version="${{env.VERSION}}.${{env.BUILD_NUMBER}}"' ./api-info.yaml
           mkdir ./build/output
           docker run --mount "type=bind,src=$(pwd),dst=/data,readonly" \
