--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -204,6 +204,7 @@ jobs:
 
       - name: Deploy Docs
         uses: JamesIves/github-pages-deploy-action@4.1.5
+        if: github.ref == 'refs/heads/main'
         with:
           branch: gh-pages
           folder: build/output
