--- a/docker-image-builder-init/Dockerfile
+++ b/docker-image-builder-init/Dockerfile
@@ -3,8 +3,8 @@ ARG IMAGE_VERSION
 
 FROM ubuntu
 
-RUN apt-get update -y
-RUN apt-get install -yy curl wget
+RUN apt-get update -y &&\
+  apt-get install -yy curl wget
 
 RUN wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq &&\
   chmod +x /usr/bin/yq
